Fixed bottom spacing of services page

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -49,6 +49,8 @@
 @media (max-width: 768px) {
   .about-container{
     margin-top: 100px;
+    padding-bottom: 100px;
+
   }
 
   .about-content {
